当前： 1、select中Conditions的List集成进Search 2、完成TangDuoDB服务端，含部署和api。 计划： 1、作为日志收集器进行长期技术验证 2、完善文档